k8s/common/kube-system/consul.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  labels:
    app.kubernetes.io/instance: consul
    app.kubernetes.io/name: consul
  name: consul
  namespace: kube-system
spec:
  clusterIP: None
  ports:
    - name: http
      port: 8500
    - name: rpc
      port: 8400
    - name: serflan-tcp
      port: 8301
      protocol: TCP
    - name: serflan-udp
      port: 8301
      protocol: UDP
    - name: serfwan-tcp
      port: 8302
      protocol: TCP
    - name: serfwan-udp
      port: 8302
      protocol: UDP
    - name: server
      port: 8300
    - name: consuldns-tcp
      port: 8600
    - name: consuldns-udp
      port: 8600
      protocol: UDP
  selector:
    app.kubernetes.io/instance: consul
    app.kubernetes.io/name: consul
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/instance: consul
    app.kubernetes.io/name: consul
  name: consul
  namespace: kube-system
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: consul
      app.kubernetes.io/name: consul
  serviceName: consul
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: consul
        app.kubernetes.io/name: consul
      name: consul
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/instance
                      operator: In
                      values:
                        - consul
                    - key: app.kubernetes.io/name
                      operator: In
                      values:
                        - consul
                topologyKey: kubernetes.io/hostname
              weight: 1
      containers:
        - command:
            - /bin/sh
            - -ec
            - |
              [...]
          image: consul:1.5.2
          imagePullPolicy: Always
          livenessProbe:
            exec:
              command:
                - consul
                - members
                - -http-addr=http://127.0.0.1:8500
            initialDelaySeconds: 300
            timeoutSeconds: 5
          name: consul
          ports:
            - containerPort: 8500
              name: http
            - containerPort: 8400
              name: rpc
            - containerPort: 8301
              name: serflan-tcp
              protocol: TCP
            - containerPort: 8301
              name: serflan-udp
              protocol: UDP
            - containerPort: 8302
              name: serfwan-tcp
              protocol: TCP
            - containerPort: 8302
              name: serfwan-udp
              protocol: UDP
            - containerPort: 8300
              name: server
            - containerPort: 8600
              name: consuldns-tcp
            - containerPort: 8600
              name: consuldns-udp
              protocol: UDP
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/consul
              name: datadir
            - mountPath: /etc/consul/secrets
              name: gossip-key
              readOnly: true
      securityContext:
        fsGroup: 1000
      volumes:
        - name: gossip-key
          secret:
            secretName: consul-gossip-key
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
    - metadata:
        name: datadir
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
