k8s/common/kube-system/coredns.yml
---
apiVersion: v1
kind: Service
metadata:
  name: coredns
  namespace: kube-system
  labels:
    app.kubernetes.io/instance: coredns
    k8s-app: coredns
    kubernetes.io/cluster-service: "true"
    kubernetes.io/name: CoreDNS
    app.kubernetes.io/name: coredns
spec:
  selector:
    app.kubernetes.io/instance: coredns
    k8s-app: coredns
    app.kubernetes.io/name: coredns
  ports:
    - { port: 53, protocol: UDP, name: udp-53 }
    - { port: 53, protocol: TCP, name: tcp-53 }
    - { port: 9153, protocol: TCP, name: metrics }
  clusterIP: 10.43.0.10

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coredns
  namespace: kube-system
  labels: &labels
    app.kubernetes.io/instance: coredns
    k8s-app: coredns
    kubernetes.io/cluster-service: "true"
    kubernetes.io/name: CoreDNS
    app.kubernetes.io/name: coredns
  annotations:
    fluxcd.io/tag.coredns: semver:~1
    fluxcd.io/automated: "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      <<: *labels
  template:
    metadata:
      labels:
        <<: *labels
      annotations:
        scheduler.alpha.kubernetes.io/critical-pod: ""
        scheduler.alpha.kubernetes.io/tolerations: '[{"key":"CriticalAddonsOnly", "operator":"Exists"}]'
    spec:
      serviceAccountName: coredns
      dnsPolicy: Default
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  <<: *labels
              topologyKey: kubernetes.io/hostname
      containers:
        - name: coredns
          image: coredns/coredns:1.6.3
          imagePullPolicy: IfNotPresent
          args: ["-conf", "/etc/coredns/Corefile"]
          volumeMounts:
            - name: config
              mountPath: /etc/coredns
              readOnly: true
          resources:
            limits: &resources
              cpu: 100m
              memory: 64Mi
            requests:
              <<: *resources
              cpu: 10m
          ports:
            - { containerPort: 53, protocol: UDP, name: udp-53 }
            - { containerPort: 53, protocol: TCP, name: tcp-53 }
            - { containerPort: 9153, protocol: TCP, name: metrics }
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
      volumes:
        - name: config
          configMap:
            name: coredns
            items:
              - key: Corefile
                path: Corefile
              - key: NodeHosts
                path: NodeHosts
