k8s/common/kube-system/kured.yml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kured
  namespace: kube-system
  labels: &labels
    app.kubernetes.io/instance: kured
    app.kubernetes.io/name: kured
  annotations:
    fluxcd.io/tag.kured: semver:~1
    fluxcd.io/automated: "true"
spec:
  selector:
    matchLabels:
      <<: *labels
  template:
    metadata:
      labels:
        <<: *labels
      annotations:
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
    spec:
      containers:
        - args:
            - --ds-name=kured
            - --ds-namespace=kube-system
          command:
            - /usr/bin/kured
          ports:
            - containerPort: 8080
              name: metrics
          image: weaveworks/kured:1.2.0
          imagePullPolicy: IfNotPresent
          name: kured
          resources: null
          securityContext:
            privileged: true
      hostPID: true
      restartPolicy: Always
      serviceAccountName: kured
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/master

---
apiVersion: v1
kind: Service
metadata:
  name: kured
  namespace: kube-system
  labels: &labels
    app.kubernetes.io/instance: kured
    app.kubernetes.io/name: kured
spec:
  clusterIP: None
  ports:
    - name: metrics
      port: 8080
  selector:
    <<: *labels
