k8s/common/kube-system/metrics-server.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app.kubernetes.io/instance: metrics-server
    app.kubernetes.io/name: metrics-server
  name: metrics-server
  namespace: kube-system
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: https
  selector:
    app: metrics-server
    release: metrics-server
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: metrics-server
    app.kubernetes.io/name: metrics-server
  name: metrics-server
  namespace: kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: metrics-server
      release: metrics-server
  template:
    metadata:
      labels:
        app: metrics-server
        release: metrics-server
    spec:
      affinity: {}
      containers:
        - command:
            - /metrics-server
            - --cert-dir=/tmp
            - --logtostderr
            - --secure-port=8443
          image: gcr.io/google_containers/metrics-server-amd64:v0.3.2
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /healthz
              port: https
              scheme: HTTPS
            initialDelaySeconds: 20
          name: metrics-server
          ports:
            - containerPort: 8443
              name: https
          readinessProbe:
            httpGet:
              path: /healthz
              port: https
              scheme: HTTPS
            initialDelaySeconds: 20
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - all
            readOnlyRootFilesystem: true
            runAsGroup: 10001
            runAsNonRoot: true
            runAsUser: 10001
          volumeMounts:
            - mountPath: /tmp
              name: tmp
      nodeSelector: {}
      serviceAccountName: metrics-server
      tolerations: []
      volumes:
        - emptyDir: {}
          name: tmp
