k8s/common/kube-system/vault.yml
---
apiVersion: v1
kind: Service
metadata:
  name: vault
  labels: &labels
    app.kubernetes.io/name: vault
    app.kubernetes.io/instance: vault
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  namespace: kube-system
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: https
      port: 8200
      targetPort: 8200
    - name: internal
      port: 8201
      targetPort: 8201
  selector:
    <<: *labels

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vault-http
  namespace: kube-system
  labels:
    app.kubernetes.io/name: vault
    app.kubernetes.io/instance: vault
spec:
  entryPoints:
    - http
  routes:
    - match: Host(`vault.hannahs.family`)
      kind: Rule
      middlewares:
        - name: https-redirect
          namespace: default
      services:
        - name: vault
          port: 8200

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vault-https
  namespace: kube-system
  labels:
    app.kubernetes.io/name: vault
    app.kubernetes.io/instance: vault
spec:
  entryPoints:
    - https
  routes:
    - match: Host(`vault.hannahs.family`)
      kind: Rule
      services:
        - name: vault
          port: 8200
  tls:
    certResolver: default

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vault
  labels: &labels
    app.kubernetes.io/name: vault
    app.kubernetes.io/instance: vault
  annotations:
    fluxcd.io/tag.vault: semver:~1
    fluxcd.io/automated: "true"
  namespace: kube-system
spec:
  serviceName: vault
  podManagementPolicy: Parallel
  replicas: 3
  updateStrategy:
    type: OnDelete
  selector:
    matchLabels:
      <<: *labels
  template:
    metadata:
      labels:
        <<: *labels
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  <<: *labels
              topologyKey: kubernetes.io/hostname
      terminationGracePeriodSeconds: 10
      serviceAccountName: vault
      volumes:
        - name: ca
          hostPath:
            path: /etc/ssl/certs/hannahs.family.ca.cert.pem
            type: File
        - name: config
          configMap:
            name: vault
        - name: secret
          secret:
            secretName: vault
      containers:
        - name: vault
          resources:
            limits:
              cpu: 250m
              memory: 256Mi
            requests:
              cpu: 250m
              memory: 256Mi
          securityContext:
            privileged: true
          image: vault:1.2.3
          command:
            - /bin/sh
            - -ec
          args:
            - |
              sed -E "s/HOST_IP/${HOST_IP?}/g" /vault/config/extraconfig-from-values.hcl > /tmp/storageconfig.hcl;
              sed -Ei "s/POD_IP/${POD_IP?}/g" /tmp/storageconfig.hcl;
              sed -Ei "s/CONSUL_TOKEN/${CONSUL_TOKEN?}/g" /tmp/storageconfig.hcl;
              chown vault:vault /tmp/storageconfig.hcl;
              /usr/local/bin/docker-entrypoint.sh vault server -config=/tmp/storageconfig.hcl
          volumeMounts:
            - name: config
              mountPath: /vault/config
            - name: secret
              mountPath: /vault/tls/cert.pem
              subPath: cert.pem
            - name: secret
              mountPath: /vault/tls/key.pem
              subPath: key.pem
            - name: ca
              mountPath: /etc/ssl/certs/hannahs.family.ca.cert.pem
          ports:
            - containerPort: 8200
              name: https
            - containerPort: 8201
              name: internal
            - containerPort: 8202
              name: replication
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -ec
                - vault status -tls-skip-verify
            failureThreshold: 2
            initialDelaySeconds: 5
            periodSeconds: 3
            successThreshold: 1
            timeoutSeconds: 5
